--- a/AuthServer/TodoApi/appsettings.json
+++ b/AuthServer/TodoApi/appsettings.json
@@ -7,5 +7,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ToDoDB": "server=localhost;user=root;password=RYVbG$/VJ@3aeSb;database=tododb"
+  "ToDoDB": "server=bwsyufguaxdc0htzyppl-mysql.services.clever-cloud.com;user=uaarce0shcyc2nz8;password=FxOIj1TmjsIPIy0XkXxB;database=bwsyufguaxdc0htzyppl"
 }
